# VoteM8

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.control/: doc.yaml  proj.yaml
.github/: .mypy.toml  .ruff.toml  CODEOWNERS  dev_environment.yaml
.github/.control/: .metadata.json
.github/ISSUE_TEMPLATE/: 01_pkg_api_fix.yaml  02_pkg_cli_fix.yaml  04_pkg_setup_fix.yaml  05_pkg_api_feat.yaml  06_pkg_cli_feat.yaml  08_pkg_api_change.yaml  09_pkg_cli_change.yaml  11_doc_fix.yaml  12_doc_feat.yaml  13_doc_change.yaml  14_test_api_fix.yaml  15_test_cli_fix.yaml  17_test_setup_fix.yaml  18_test_api_feat.yaml  19_test_cli_feat.yaml  21_test_api_change.yaml  22_test_cli_change.yaml  24_refactor.yaml  25_config.yaml  26_devops.yaml  27_maintenance.yaml  config.yml
docs/website/: environment.yaml
docs/website/source/: .toc.yaml
docs/website/source/_static/css/: custom.css
docs/website/source/about/: index.md
docs/website/source/about/contact/: index.md
docs/website/source/contribute/: index.md
docs/website/source/intro/: index.md
docs/website/source/intro/background/: index.md
docs/website/source/intro/overview/: index.md
docs/website/source/manual/quickstart/: index.md
pkg/: MANIFEST.in  README.md  conda_env.yaml  pyproject.toml  requirements.txt
pkg/src/my_new_project/: __init__.py
pkg/src/votem8/: __init__.py  __main__.py  votem8.py
pkg/src/votem8/data/: __init__.py
pkg/src/votem8/exception/: data.py
pkg/src/votem8/methods/: __init__.py  aras.py  binary_pareto.py  comet.py  ecr.py  pareto.py  promethee.py  rbr.py  rbv.py  topsis.py  vikor.py  waspas.py  wpm.py  wsm.py  zscore.py
pkg/src/votem8/utils/: __init__.py  utils.py
tests/: MANIFEST.in  conda_env.yaml  pyproject.toml  requirements.txt
tests/LICENSES/: LICENSE-MIT
tests/src/my_new_project_testsuite/: __init__.py
tests/src/votem8_testsuite/: __init__.py  __main__.py  data_tests.py
tests/src/votem8_testsuite/data/: test_file_std.csv
tests/src/votem8_testsuite/data/config/: coverage.toml  pytest.toml
